CAGRID-837: getting rid of endorsed jars requirement in caGrid 1.5
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/branches/caGrid-1_5_release/Software/core@18583 dd7b0c16-3c94-4492-92de-414b6a06f0b1